2012-01-04  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-audio.c (avt_LoadAU_RW): restore file position on error

2012-01-03  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar/questionary.lua: rewritten
	  lua/fs-quiz-de.lua, lua/fs-quiz-en.lua: adapted
	  lua/akfavatar/Fragebogen.lua: removed

2012-01-02  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c: add more error messages

2012-01-01  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar/ar.lua: ar:dolua() replaced with ar:loadlua()

	* avtaddons.h, avtvorbis.c (avta_load_vorbis_stream): new function
	(avta_load_vorbis_file): adapted

	* lua/akfavatar-vorbis.c (lvorbis_load_stream, make_audio_element):
	new functions

	* lua/lua-avt.c (lavt_load_audio_stream): new function

	* lua/akfavatar-vorbis.c (lvorbis_load_stream_chain):
	new function

	* lua/akfavatar/avtdemo.lua (load_audio):
	load directly from stream, if audio comes from an archive

2011-12-29  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-akfavatar-prg.c (require): parameter nresults
	(handle_require_options, avtdemo): adapted
	lua/akfavatar/avtdemo.lua: defines no globals

2011-12-28  Andreas K. Foerster  <info@akfoerster.de>

	* lua/documentation/*/akfavatar-graphic.about:
	example code for gr:export_ppm() had to be adjusted

2011-12-27  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar-term.c (APC_command): use luaL_loadbufferx()

2011-12-26  Andreas K. Foerster  <info@akfoerster.de>

	* lua/interactve_lua.lua: use "computer.xpm" as avatar

	* lua/lua-akfavatar-prg.c (ask_file, main): use luaL_loadfilex
	(file_reader, loadfile): removed

	* lua/lua-akfavatar-prg.c (run_executable):
	don't check for binary code, use luaL_loadbufferx

	* lua/characters_tables.lua:
	use hexadecimal UTF-8 presentation (same for C and Lua)

2011-12-25  Andreas K. Foerster  <info@akfoerster.de>

	* lua/*: ported to Lua-5.2

2011-12-13  Andreas K. Foerster  <info@akfoerster.de>
