@@ -1031,6 +1031,14 @@ AVT_API avt_audio_t *avt_load_audio_file (const char *filename);
 
 /*
  * loads audio in AU or Wave format from a stream
+ * if maxsize is >0 it reads no more than this size
+ * maxsize is ignored for Wave data
+ * not for headerless formats
+ */
+AVT_API avt_audio_t *avt_load_audio_part (avt_stream *stream, int maxsize);
+
+/*
+ * loads audio in AU or Wave format from a stream
  * not for headerless formats
  */
 AVT_API avt_audio_t *avt_load_audio_stream (avt_stream *stream);
