@@ -1418,12 +1418,13 @@ lavt_load_audio_stream (lua_State * L)
 {
   luaL_Stream *stream;
   avt_audio_t *audio_data;
+  lua_Unsigned maxsize;
 
   stream = (luaL_Stream *) luaL_checkudata (L, 1, LUA_FILEHANDLE);
-  /* parameter 2 reserved for maximum size but not used here */
+  maxsize = lua_tounsigned (L, 2);	/* nothing or 0 allowed */
 
   if (stream->closef == NULL)
-    return luaL_error(L, "attempt to use a closed file");
+    return luaL_error (L, "attempt to use a closed file");
 
   if (!avt_audio_playing (NULL))
     audio_not_playing (L);
@@ -1431,7 +1432,7 @@ lavt_load_audio_stream (lua_State * L)
   /* full garbage collection */
   lua_gc (L, LUA_GCCOLLECT, 0);
 
-  audio_data = avt_load_audio_stream ((avt_stream *) stream->f);
+  audio_data = avt_load_audio_part ((avt_stream *) stream->f, maxsize);
 
   if (!audio_data)
     {
