@@ -8,7 +8,7 @@
   - Some more audio files
 
   C-API changes:
-  - new functions: avt_delay
+  - new functions: avt_delay, avt_load_audio_part
   - avtaddons:
     - avta_arch_get_member: new function
     - avta_arch_get_data: rewritten
